--- a/.dockerignore
+++ b/.dockerignore
@@ -134,9 +134,20 @@ dmypy.json
 ## Vagrant
 ##########
 
+# General
 .vagrant/
+
+# Log files (if you are creating logs in debug mode, uncomment this)
+# *.log
 
 ## VSCode
 #########
 
-.vscode/
+.vscode
+*.code-workspace
+
+
+## Misc
+#######
+
+demo-report/
