--- a/.gitignore
+++ b/.gitignore
@@ -143,11 +143,7 @@ dmypy.json
 ## VSCode
 #########
 
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 *.code-workspace
 
 
