--- a/examples/surveillance.yml
+++ b/examples/surveillance.yml
@@ -5,20 +5,38 @@ networks:
     labels:
       org.fundacionctic.wotemu.net: ''
     name: cloud_user
-  edge_link:
+  edge_link_location_1:
     attachable: true
     driver: overlay
     labels:
       org.fundacionctic.wotemu.net: ''
-    name: edge_link
-  field:
+    name: edge_link_location_1
+  edge_link_location_2:
     attachable: true
     driver: overlay
     labels:
       org.fundacionctic.wotemu.net: ''
-    name: field
+    name: edge_link_location_2
+  field_location_1:
+    attachable: true
+    driver: overlay
+    labels:
+      org.fundacionctic.wotemu.net: ''
+    name: field_location_1
+  field_location_2:
+    attachable: true
+    driver: overlay
+    labels:
+      org.fundacionctic.wotemu.net: ''
+    name: field_location_2
+  srvnet_mongo_historian:
+    attachable: true
+    driver: overlay
+    labels:
+      org.fundacionctic.wotemu.servicenet: ''
+    name: srvnet_mongo_historian
 services:
-  camera_num_0:
+  camera_location_1_0:
     cap_add:
     - ALL
     command:
@@ -27,9 +45,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field
-    - docker_api_proxy
+    - gw_field_location_1
     - redis
+    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -52,10 +70,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field
+    - field_location_1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_num_1:
+  camera_location_1_1:
     cap_add:
     - ALL
     command:
@@ -64,9 +82,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field
-    - docker_api_proxy
+    - gw_field_location_1
     - redis
+    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -89,10 +107,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field
+    - field_location_1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_num_2:
+  camera_location_1_2:
     cap_add:
     - ALL
     command:
@@ -101,9 +119,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field
-    - docker_api_proxy
+    - gw_field_location_1
     - redis
+    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -126,10 +144,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field
+    - field_location_1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_num_3:
+  camera_location_1_3:
     cap_add:
     - ALL
     command:
@@ -138,9 +156,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field
-    - docker_api_proxy
+    - gw_field_location_1
     - redis
+    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -163,10 +181,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field
+    - field_location_1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_num_4:
+  camera_location_2_0:
     cap_add:
     - ALL
     command:
@@ -175,9 +193,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field
-    - docker_api_proxy
+    - gw_field_location_2
     - redis
+    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -200,22 +218,25 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field
+    - field_location_2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  cloud_server:
+  camera_location_2_1:
     cap_add:
     - ALL
     command:
     - app
     - --path
-    - wotemu_clock
+    - wotemu_camera
     - --enable-http
     depends_on:
-    - docker_api_proxy
-    - gw_cloud_user
+    - gw_field_location_2
     - redis
-    - gw_edge_link
+    - docker_api_proxy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
       NODE_HOSTNAME: '{{.Node.Hostname}}'
@@ -228,16 +249,16 @@ services:
       REDIS_URL: redis://redis
       SERVICE_ID: '{{.Service.ID}}'
       SERVICE_NAME: '{{.Service.Name}}'
+      TARGET_CPU_SPEED: 200
     hostname: '{{.Task.Name}}'
     image: agmangas/wotemu
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - cloud_user
-    - edge_link
+    - field_location_2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  detector:
+  detector_location_1:
     cap_add:
     - ALL
     command:
@@ -246,14 +267,15 @@ services:
     - wotemu_detector
     - --func-param
     - cameras
-    - '[{"servient_host": "camera_num_0.field"}, {"servient_host": "camera_num_1.field"},
-      {"servient_host": "camera_num_2.field"}, {"servient_host": "camera_num_3.field"},
-      {"servient_host": "camera_num_4.field"}]'
+    - '[{"servient_host": "camera_location_1_0.field_location_1"}, {"servient_host":
+      "camera_location_1_1.field_location_1"}, {"servient_host": "camera_location_1_2.field_location_1"},
+      {"servient_host": "camera_location_1_3.field_location_1"}]'
+    - --enable-http
     depends_on:
-    - gw_field
-    - docker_api_proxy
     - redis
-    - gw_edge_link
+    - gw_field_location_1
+    - gw_edge_link_location_1
+    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -276,8 +298,51 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field
-    - edge_link
+    - edge_link_location_1
+    - field_location_1
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  detector_location_2:
+    cap_add:
+    - ALL
+    command:
+    - app
+    - --path
+    - wotemu_detector
+    - --func-param
+    - cameras
+    - '[{"servient_host": "camera_location_2_0.field_location_2"}, {"servient_host":
+      "camera_location_2_1.field_location_2"}]'
+    - --enable-http
+    depends_on:
+    - gw_field_location_2
+    - redis
+    - docker_api_proxy
+    - gw_edge_link_location_2
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+      TARGET_CPU_SPEED: 600
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - edge_link_location_2
+    - field_location_2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   docker_api_proxy:
@@ -295,9 +360,11 @@ services:
       TASKS: '1'
     image: tecnativa/docker-socket-proxy
     networks:
+    - edge_link_location_2
+    - edge_link_location_1
+    - field_location_2
     - cloud_user
-    - field
-    - edge_link
+    - field_location_1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   gw_cloud_user:
@@ -330,7 +397,7 @@ services:
     - cloud_user
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  gw_edge_link:
+  gw_edge_link_location_1:
     cap_add:
     - ALL
     command:
@@ -357,10 +424,40 @@ services:
     labels:
       org.fundacionctic.wotemu.gw: ''
     networks:
-    - edge_link
+    - edge_link_location_1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  gw_field:
+  gw_edge_link_location_2:
+    cap_add:
+    - ALL
+    command:
+    - gateway
+    - delay --time 300 --jitter 150 --distribution normal
+    - rate --rate 1500kbit
+    depends_on:
+    - docker_api_proxy
+    - redis
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.gw: ''
+    networks:
+    - edge_link_location_2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  gw_field_location_1:
     cap_add:
     - ALL
     command:
@@ -387,17 +484,109 @@ services:
     labels:
       org.fundacionctic.wotemu.gw: ''
     networks:
-    - field
+    - field_location_1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
+  gw_field_location_2:
+    cap_add:
+    - ALL
+    command:
+    - gateway
+    - delay --time 25 --jitter 5 --distribution normal
+    - rate --rate 50mbit
+    depends_on:
+    - docker_api_proxy
+    - redis
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.gw: ''
+    networks:
+    - field_location_2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  historian:
+    cap_add:
+    - ALL
+    command:
+    - app
+    - --path
+    - wotemu_mongo_historian
+    - --func-param
+    - mongo_uri
+    - mongodb://mongo
+    - --func-param
+    - observed_things
+    - '[{"servient_host": "detector_location_1.edge_link_location_1", "thing_id":
+      "urn:org:fundacionctic:thing:wotemu:detector"}, {"servient_host": "detector_location_2.edge_link_location_2",
+      "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"}]'
+    - --enable-http
+    depends_on:
+    - docker_api_proxy
+    - gw_cloud_user
+    - gw_edge_link_location_1
+    - gw_edge_link_location_2
+    - redis
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - srvnet_mongo_historian
+    - edge_link_location_2
+    - edge_link_location_1
+    - cloud_user
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  mongo:
+    deploy:
+      restart_policy:
+        condition: on-failure
+    environment:
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+    hostname: '{{.Task.Name}}'
+    image: mongo:4
+    labels:
+      org.fundacionctic.wotemu.service: ''
+    networks:
+    - srvnet_mongo_historian
   redis:
     image: redis:5
     labels:
       org.fundacionctic.wotemu.redis: ''
     networks:
+    - edge_link_location_2
+    - edge_link_location_1
+    - field_location_2
     - cloud_user
-    - field
-    - edge_link
+    - field_location_1
     ports:
     - '6379'
   user:
@@ -406,12 +595,19 @@ services:
     command:
     - app
     - --path
-    - wotemu_clock
-    - --enable-http
+    - wotemu_reader
+    - --func-param
+    - servient_host
+    - historian.cloud_user
+    - --func-param
+    - thing_id
+    - urn:org:fundacionctic:thing:historian
     depends_on:
-    - docker_api_proxy
     - gw_cloud_user
+    - docker_api_proxy
     - redis
+    deploy:
+      replicas: 3
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
       NODE_HOSTNAME: '{{.Node.Hostname}}'
