--- a/examples/surveillance.yml
+++ b/examples/surveillance.yml
@@ -45,9 +45,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
+    - gw_field_location_1
     - redis
     - docker_api_proxy
-    - gw_field_location_1
     deploy:
       resources:
         limits:
@@ -82,9 +82,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
+    - gw_field_location_1
     - redis
     - docker_api_proxy
-    - gw_field_location_1
     deploy:
       resources:
         limits:
@@ -119,9 +119,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
+    - gw_field_location_1
     - redis
     - docker_api_proxy
-    - gw_field_location_1
     deploy:
       resources:
         limits:
@@ -156,9 +156,194 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - docker_api_proxy
     - gw_field_location_2
     - redis
+    - docker_api_proxy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+      TARGET_CPU_SPEED: 200
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - field_location_2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  camera_location_2_1:
+    cap_add:
+    - ALL
+    command:
+    - app
+    - --path
+    - wotemu_camera
+    - --enable-http
+    depends_on:
+    - gw_field_location_2
+    - redis
+    - docker_api_proxy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+      TARGET_CPU_SPEED: 200
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - field_location_2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  camera_location_2_2:
+    cap_add:
+    - ALL
+    command:
+    - app
+    - --path
+    - wotemu_camera
+    - --enable-http
+    depends_on:
+    - gw_field_location_2
+    - redis
+    - docker_api_proxy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+      TARGET_CPU_SPEED: 200
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - field_location_2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  camera_location_2_3:
+    cap_add:
+    - ALL
+    command:
+    - app
+    - --path
+    - wotemu_camera
+    - --enable-http
+    depends_on:
+    - gw_field_location_2
+    - redis
+    - docker_api_proxy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+      TARGET_CPU_SPEED: 200
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - field_location_2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  camera_location_2_4:
+    cap_add:
+    - ALL
+    command:
+    - app
+    - --path
+    - wotemu_camera
+    - --enable-http
+    depends_on:
+    - gw_field_location_2
+    - redis
+    - docker_api_proxy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+      TARGET_CPU_SPEED: 200
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - field_location_2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  camera_location_2_5:
+    cap_add:
+    - ALL
+    command:
+    - app
+    - --path
+    - wotemu_camera
+    - --enable-http
+    depends_on:
+    - gw_field_location_2
+    - redis
+    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -197,10 +382,10 @@ services:
       "camera_location_1_1.field_location_1"}, {"servient_host": "camera_location_1_2.field_location_1"}]'
     - --enable-http
     depends_on:
-    - redis
-    - docker_api_proxy
     - gw_edge_link_location_1
     - gw_field_location_1
+    - redis
+    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -236,13 +421,16 @@ services:
     - wotemu_detector
     - --func-param
     - cameras
-    - '[{"servient_host": "camera_location_2_0.field_location_2"}]'
+    - '[{"servient_host": "camera_location_2_0.field_location_2"}, {"servient_host":
+      "camera_location_2_1.field_location_2"}, {"servient_host": "camera_location_2_2.field_location_2"},
+      {"servient_host": "camera_location_2_3.field_location_2"}, {"servient_host":
+      "camera_location_2_4.field_location_2"}, {"servient_host": "camera_location_2_5.field_location_2"}]'
     - --enable-http
     depends_on:
-    - gw_edge_link_location_2
     - gw_field_location_2
-    - docker_api_proxy
+    - gw_edge_link_location_2
     - redis
+    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -285,9 +473,9 @@ services:
     image: tecnativa/docker-socket-proxy
     networks:
     - edge_link_location_2
-    - edge_link_location_1
     - field_location_2
     - cloud_user
+    - edge_link_location_1
     - field_location_1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
@@ -458,10 +646,10 @@ services:
       "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"}]'
     - --enable-http
     depends_on:
-    - redis
-    - gw_edge_link_location_2
     - gw_edge_link_location_1
     - gw_cloud_user
+    - gw_edge_link_location_2
+    - redis
     - docker_api_proxy
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
@@ -481,9 +669,9 @@ services:
       org.fundacionctic.wotemu.node: ''
     networks:
     - edge_link_location_2
+    - cloud_user
     - srvnet_mongo_historian
     - edge_link_location_1
-    - cloud_user
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   mongo:
@@ -507,9 +695,9 @@ services:
       org.fundacionctic.wotemu.redis: ''
     networks:
     - edge_link_location_2
-    - edge_link_location_1
     - field_location_2
     - cloud_user
+    - edge_link_location_1
     - field_location_1
     ports:
     - '6379'
@@ -534,8 +722,8 @@ services:
     - '5'
     depends_on:
     - gw_cloud_user
-    - docker_api_proxy
     - redis
+    - docker_api_proxy
     deploy:
       replicas: 5
     environment:
