--- a/examples/surveillance.yml
+++ b/examples/surveillance.yml
@@ -5,38 +5,38 @@ networks:
     labels:
       org.fundacionctic.wotemu.net: ''
     name: cloud_user
-  edge_link_location_1:
+  edge_link_loc1:
     attachable: true
     driver: overlay
     labels:
       org.fundacionctic.wotemu.net: ''
-    name: edge_link_location_1
-  edge_link_location_2:
+    name: edge_link_loc1
+  edge_link_loc2:
     attachable: true
     driver: overlay
     labels:
       org.fundacionctic.wotemu.net: ''
-    name: edge_link_location_2
-  field_location_1:
+    name: edge_link_loc2
+  field_loc1:
     attachable: true
     driver: overlay
     labels:
       org.fundacionctic.wotemu.net: ''
-    name: field_location_1
-  field_location_2:
+    name: field_loc1
+  field_loc2:
     attachable: true
     driver: overlay
     labels:
       org.fundacionctic.wotemu.net: ''
-    name: field_location_2
-  srvnet_mongo_historian:
+    name: field_loc2
+  srvnet_mongo_cloud:
     attachable: true
     driver: overlay
     labels:
       org.fundacionctic.wotemu.servicenet: ''
-    name: srvnet_mongo_historian
+    name: srvnet_mongo_cloud
 services:
-  camera_location_1_0:
+  camera_loc1_0:
     cap_add:
     - ALL
     command:
@@ -45,8 +45,8 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field_location_1
     - redis
+    - gw_field_loc1
     - docker_api_proxy
     deploy:
       resources:
@@ -70,10 +70,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_1
+    - field_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_location_1_1:
+  camera_loc1_1:
     cap_add:
     - ALL
     command:
@@ -82,8 +82,8 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field_location_1
     - redis
+    - gw_field_loc1
     - docker_api_proxy
     deploy:
       resources:
@@ -107,10 +107,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_1
+    - field_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_location_1_2:
+  camera_loc2_0:
     cap_add:
     - ALL
     command:
@@ -119,9 +119,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field_location_1
     - redis
     - docker_api_proxy
+    - gw_field_loc2
     deploy:
       resources:
         limits:
@@ -144,10 +144,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_1
+    - field_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_location_2_0:
+  camera_loc2_1:
     cap_add:
     - ALL
     command:
@@ -156,9 +156,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field_location_2
     - redis
     - docker_api_proxy
+    - gw_field_loc2
     deploy:
       resources:
         limits:
@@ -181,10 +181,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_2
+    - field_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_location_2_1:
+  camera_loc2_2:
     cap_add:
     - ALL
     command:
@@ -193,9 +193,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field_location_2
     - redis
     - docker_api_proxy
+    - gw_field_loc2
     deploy:
       resources:
         limits:
@@ -218,10 +218,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_2
+    - field_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_location_2_2:
+  camera_loc2_3:
     cap_add:
     - ALL
     command:
@@ -230,9 +230,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field_location_2
     - redis
     - docker_api_proxy
+    - gw_field_loc2
     deploy:
       resources:
         limits:
@@ -255,10 +255,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_2
+    - field_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_location_2_3:
+  camera_loc2_4:
     cap_add:
     - ALL
     command:
@@ -267,9 +267,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field_location_2
     - redis
     - docker_api_proxy
+    - gw_field_loc2
     deploy:
       resources:
         limits:
@@ -292,10 +292,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_2
+    - field_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_location_2_4:
+  camera_loc2_5:
     cap_add:
     - ALL
     command:
@@ -304,9 +304,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field_location_2
     - redis
     - docker_api_proxy
+    - gw_field_loc2
     deploy:
       resources:
         limits:
@@ -329,10 +329,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_2
+    - field_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  camera_location_2_5:
+  camera_loc2_6:
     cap_add:
     - ALL
     command:
@@ -341,9 +341,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - gw_field_location_2
     - redis
     - docker_api_proxy
+    - gw_field_loc2
     deploy:
       resources:
         limits:
@@ -366,10 +366,91 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_2
+    - field_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  detector_location_1:
+  camera_loc2_7:
+    cap_add:
+    - ALL
+    command:
+    - app
+    - --path
+    - wotemu_camera
+    - --enable-http
+    depends_on:
+    - redis
+    - docker_api_proxy
+    - gw_field_loc2
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+      TARGET_CPU_SPEED: 200
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - field_loc2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  cloud:
+    cap_add:
+    - ALL
+    command:
+    - app
+    - --path
+    - wotemu_mongo_historian
+    - --func-param
+    - mongo_uri
+    - mongodb://mongo
+    - --func-param
+    - observed_things
+    - '[{"servient_host": "detector_loc1.edge_link_loc1", "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"},
+      {"servient_host": "detector_loc2.edge_link_loc2", "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"}]'
+    - --enable-http
+    depends_on:
+    - redis
+    - gw_edge_link_loc2
+    - docker_api_proxy
+    - gw_cloud_user
+    - gw_edge_link_loc1
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - cloud_user
+    - edge_link_loc1
+    - srvnet_mongo_cloud
+    - edge_link_loc2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  detector_loc1:
     cap_add:
     - ALL
     command:
@@ -378,13 +459,12 @@ services:
     - wotemu_detector
     - --func-param
     - cameras
-    - '[{"servient_host": "camera_location_1_0.field_location_1"}, {"servient_host":
-      "camera_location_1_1.field_location_1"}, {"servient_host": "camera_location_1_2.field_location_1"}]'
+    - '[{"servient_host": "camera_loc1_0.field_loc1"}, {"servient_host": "camera_loc1_1.field_loc1"}]'
     - --enable-http
     depends_on:
-    - gw_edge_link_location_1
-    - gw_field_location_1
     - redis
+    - gw_field_loc1
+    - gw_edge_link_loc1
     - docker_api_proxy
     deploy:
       resources:
@@ -408,11 +488,11 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_location_1
-    - edge_link_location_1
+    - edge_link_loc1
+    - field_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  detector_location_2:
+  detector_loc2:
     cap_add:
     - ALL
     command:
@@ -421,16 +501,16 @@ services:
     - wotemu_detector
     - --func-param
     - cameras
-    - '[{"servient_host": "camera_location_2_0.field_location_2"}, {"servient_host":
-      "camera_location_2_1.field_location_2"}, {"servient_host": "camera_location_2_2.field_location_2"},
-      {"servient_host": "camera_location_2_3.field_location_2"}, {"servient_host":
-      "camera_location_2_4.field_location_2"}, {"servient_host": "camera_location_2_5.field_location_2"}]'
+    - '[{"servient_host": "camera_loc2_0.field_loc2"}, {"servient_host": "camera_loc2_1.field_loc2"},
+      {"servient_host": "camera_loc2_2.field_loc2"}, {"servient_host": "camera_loc2_3.field_loc2"},
+      {"servient_host": "camera_loc2_4.field_loc2"}, {"servient_host": "camera_loc2_5.field_loc2"},
+      {"servient_host": "camera_loc2_6.field_loc2"}, {"servient_host": "camera_loc2_7.field_loc2"}]'
     - --enable-http
     depends_on:
-    - gw_field_location_2
-    - gw_edge_link_location_2
+    - gw_edge_link_loc2
     - redis
     - docker_api_proxy
+    - gw_field_loc2
     deploy:
       resources:
         limits:
@@ -453,8 +533,8 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - edge_link_location_2
-    - field_location_2
+    - field_loc2
+    - edge_link_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   docker_api_proxy:
@@ -472,11 +552,11 @@ services:
       TASKS: '1'
     image: tecnativa/docker-socket-proxy
     networks:
-    - edge_link_location_2
-    - field_location_2
+    - field_loc2
+    - edge_link_loc1
+    - edge_link_loc2
     - cloud_user
-    - edge_link_location_1
-    - field_location_1
+    - field_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   gw_cloud_user:
@@ -509,7 +589,7 @@ services:
     - cloud_user
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  gw_edge_link_location_1:
+  gw_edge_link_loc1:
     cap_add:
     - ALL
     command:
@@ -536,10 +616,10 @@ services:
     labels:
       org.fundacionctic.wotemu.gw: ''
     networks:
-    - edge_link_location_1
+    - edge_link_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  gw_edge_link_location_2:
+  gw_edge_link_loc2:
     cap_add:
     - ALL
     command:
@@ -566,10 +646,10 @@ services:
     labels:
       org.fundacionctic.wotemu.gw: ''
     networks:
-    - edge_link_location_2
+    - edge_link_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  gw_field_location_1:
+  gw_field_loc1:
     cap_add:
     - ALL
     command:
@@ -596,10 +676,10 @@ services:
     labels:
       org.fundacionctic.wotemu.gw: ''
     networks:
-    - field_location_1
+    - field_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  gw_field_location_2:
+  gw_field_loc2:
     cap_add:
     - ALL
     command:
@@ -626,52 +706,7 @@ services:
     labels:
       org.fundacionctic.wotemu.gw: ''
     networks:
-    - field_location_2
-    volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
-  historian:
-    cap_add:
-    - ALL
-    command:
-    - app
-    - --path
-    - wotemu_mongo_historian
-    - --func-param
-    - mongo_uri
-    - mongodb://mongo
-    - --func-param
-    - observed_things
-    - '[{"servient_host": "detector_location_1.edge_link_location_1", "thing_id":
-      "urn:org:fundacionctic:thing:wotemu:detector"}, {"servient_host": "detector_location_2.edge_link_location_2",
-      "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"}]'
-    - --enable-http
-    depends_on:
-    - gw_edge_link_location_1
-    - gw_cloud_user
-    - gw_edge_link_location_2
-    - redis
-    - docker_api_proxy
-    environment:
-      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
-      NODE_HOSTNAME: '{{.Node.Hostname}}'
-      NODE_ID: '{{.Node.ID}}'
-      PORT_CATALOGUE: '9090'
-      PORT_COAP: '5683'
-      PORT_HTTP: '80'
-      PORT_MQTT: '1883'
-      PORT_WS: '81'
-      REDIS_URL: redis://redis
-      SERVICE_ID: '{{.Service.ID}}'
-      SERVICE_NAME: '{{.Service.Name}}'
-    hostname: '{{.Task.Name}}'
-    image: agmangas/wotemu
-    labels:
-      org.fundacionctic.wotemu.node: ''
-    networks:
-    - edge_link_location_2
-    - cloud_user
-    - srvnet_mongo_historian
-    - edge_link_location_1
+    - field_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   mongo:
@@ -688,17 +723,17 @@ services:
     labels:
       org.fundacionctic.wotemu.service: ''
     networks:
-    - srvnet_mongo_historian
+    - srvnet_mongo_cloud
   redis:
     image: redis:5
     labels:
       org.fundacionctic.wotemu.redis: ''
     networks:
-    - edge_link_location_2
-    - field_location_2
+    - field_loc2
+    - edge_link_loc1
+    - edge_link_loc2
     - cloud_user
-    - edge_link_location_1
-    - field_location_1
+    - field_loc1
     ports:
     - '6379'
   user:
@@ -710,7 +745,7 @@ services:
     - wotemu_caller
     - --func-param
     - servient_host
-    - historian.cloud_user
+    - cloud.cloud_user
     - --func-param
     - thing_id
     - urn:org:fundacionctic:thing:historian
