Split surveillance example into two versions

--- a/examples/surveillance_cloud.yml
+++ b/examples/surveillance_cloud.yml
@@ -1,4 +1,10 @@
 networks:
+  cloud:
+    attachable: true
+    driver: overlay
+    labels:
+      org.fundacionctic.wotemu.net: ''
+    name: cloud
   cloud_user:
     attachable: true
     driver: overlay
@@ -17,18 +23,6 @@ networks:
     labels:
       org.fundacionctic.wotemu.net: ''
     name: edge_3g_loc2
-  field_loc1:
-    attachable: true
-    driver: overlay
-    labels:
-      org.fundacionctic.wotemu.net: ''
-    name: field_loc1
-  field_loc2:
-    attachable: true
-    driver: overlay
-    labels:
-      org.fundacionctic.wotemu.net: ''
-    name: field_loc2
   srvnet_mongo_cloud:
     attachable: true
     driver: overlay
@@ -74,17 +68,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
-    - gw_field_loc1
-    - docker_api_proxy
     - redis
+    - gw_edge_2g_loc1
+    - docker_api_proxy
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_2g_loc1
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -101,7 +96,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc1
+    - edge_2g_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   camera_loc1_1:
@@ -111,17 +106,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
-    - gw_field_loc1
-    - docker_api_proxy
     - redis
+    - gw_edge_2g_loc1
+    - docker_api_proxy
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_2g_loc1
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -138,7 +134,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc1
+    - edge_2g_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   camera_loc2_0:
@@ -148,17 +144,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
     - redis
     - docker_api_proxy
-    - gw_field_loc2
+    - gw_edge_3g_loc2
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -175,7 +172,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   camera_loc2_1:
@@ -185,17 +182,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
     - redis
     - docker_api_proxy
-    - gw_field_loc2
+    - gw_edge_3g_loc2
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -212,7 +210,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   camera_loc2_2:
@@ -222,17 +220,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
     - redis
     - docker_api_proxy
-    - gw_field_loc2
+    - gw_edge_3g_loc2
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -249,7 +248,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   camera_loc2_3:
@@ -259,17 +258,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
     - redis
     - docker_api_proxy
-    - gw_field_loc2
+    - gw_edge_3g_loc2
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -286,7 +286,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   camera_loc2_4:
@@ -296,17 +296,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
     - redis
     - docker_api_proxy
-    - gw_field_loc2
+    - gw_edge_3g_loc2
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -323,7 +324,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   camera_loc2_5:
@@ -333,17 +334,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
     - redis
     - docker_api_proxy
-    - gw_field_loc2
+    - gw_edge_3g_loc2
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -360,7 +362,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   camera_loc2_6:
@@ -370,17 +372,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
     - redis
     - docker_api_proxy
-    - gw_field_loc2
+    - gw_edge_3g_loc2
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -397,7 +400,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   camera_loc2_7:
@@ -407,17 +410,18 @@ services:
     - app
     - --path
     - wotemu_camera
-    - --enable-http
+    - --enable-mqtt
     depends_on:
     - redis
     - docker_api_proxy
-    - gw_field_loc2
+    - gw_edge_3g_loc2
     deploy:
       resources:
         limits:
           memory: 256M
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -434,7 +438,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   cloud:
@@ -449,15 +453,13 @@ services:
     - mongodb://mongo
     - --func-param
     - observed_things
-    - '[{"servient_host": "detector_loc1.edge_2g_loc1", "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"},
-      {"servient_host": "detector_loc2.edge_3g_loc2", "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"}]'
+    - '[{"servient_host": "detector.cloud", "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"}]'
     - --enable-http
     depends_on:
+    - redis
+    - docker_api_proxy
+    - gw_cloud
     - gw_cloud_user
-    - redis
-    - gw_edge_2g_loc1
-    - gw_edge_3g_loc2
-    - docker_api_proxy
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
       NODE_HOSTNAME: '{{.Node.Hostname}}'
@@ -475,13 +477,12 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - srvnet_mongo_cloud
     - cloud_user
-    - edge_2g_loc1
-    - edge_3g_loc2
+    - srvnet_mongo_cloud
+    - cloud
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  detector_loc1:
+  detector:
     cap_add:
     - ALL
     command:
@@ -490,66 +491,20 @@ services:
     - wotemu_detector
     - --func-param
     - cameras
-    - '[{"servient_host": "camera_loc1_0.field_loc1"}, {"servient_host": "camera_loc1_1.field_loc1"}]'
-    - --enable-mqtt
-    depends_on:
-    - gw_edge_2g_loc1
-    - gw_field_loc1
-    - docker_api_proxy
-    - redis
-    deploy:
-      resources:
-        limits:
-          memory: 1G
-    environment:
-      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
-      MQTT_BROKER_HOST: broker.edge_2g_loc1
-      NODE_HOSTNAME: '{{.Node.Hostname}}'
-      NODE_ID: '{{.Node.ID}}'
-      PORT_CATALOGUE: '9090'
-      PORT_COAP: '5683'
-      PORT_HTTP: '80'
-      PORT_MQTT: '1883'
-      PORT_WS: '81'
-      REDIS_URL: redis://redis
-      SERVICE_ID: '{{.Service.ID}}'
-      SERVICE_NAME: '{{.Service.Name}}'
-      TARGET_CPU_SPEED: 600
-    hostname: '{{.Task.Name}}'
-    image: agmangas/wotemu
-    labels:
-      org.fundacionctic.wotemu.node: ''
-    networks:
-    - field_loc1
-    - edge_2g_loc1
-    volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
-  detector_loc2:
-    cap_add:
-    - ALL
-    command:
-    - app
-    - --path
-    - wotemu_detector
-    - --func-param
-    - cameras
-    - '[{"servient_host": "camera_loc2_0.field_loc2"}, {"servient_host": "camera_loc2_1.field_loc2"},
-      {"servient_host": "camera_loc2_2.field_loc2"}, {"servient_host": "camera_loc2_3.field_loc2"},
-      {"servient_host": "camera_loc2_4.field_loc2"}, {"servient_host": "camera_loc2_5.field_loc2"},
-      {"servient_host": "camera_loc2_6.field_loc2"}, {"servient_host": "camera_loc2_7.field_loc2"}]'
-    - --enable-mqtt
+    - '[{"servient_host": "camera_loc1_0.edge_2g_loc1"}, {"servient_host": "camera_loc1_1.edge_2g_loc1"},
+      {"servient_host": "camera_loc2_0.edge_3g_loc2"}, {"servient_host": "camera_loc2_1.edge_3g_loc2"},
+      {"servient_host": "camera_loc2_2.edge_3g_loc2"}, {"servient_host": "camera_loc2_3.edge_3g_loc2"},
+      {"servient_host": "camera_loc2_4.edge_3g_loc2"}, {"servient_host": "camera_loc2_5.edge_3g_loc2"},
+      {"servient_host": "camera_loc2_6.edge_3g_loc2"}, {"servient_host": "camera_loc2_7.edge_3g_loc2"}]'
+    - --enable-http
     depends_on:
     - redis
     - gw_edge_3g_loc2
     - docker_api_proxy
-    - gw_field_loc2
-    deploy:
-      resources:
-        limits:
-          memory: 1G
+    - gw_cloud
+    - gw_edge_2g_loc1
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
-      MQTT_BROKER_HOST: broker.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -560,13 +515,13 @@ services:
       REDIS_URL: redis://redis
       SERVICE_ID: '{{.Service.ID}}'
       SERVICE_NAME: '{{.Service.Name}}'
-      TARGET_CPU_SPEED: 600
     hostname: '{{.Task.Name}}'
     image: agmangas/wotemu
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - field_loc2
+    - edge_2g_loc1
+    - cloud
     - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
@@ -585,11 +540,40 @@ services:
       TASKS: '1'
     image: tecnativa/docker-socket-proxy
     networks:
-    - field_loc2
-    - cloud_user
-    - field_loc1
-    - edge_2g_loc1
     - edge_3g_loc2
+    - cloud
+    - cloud_user
+    - edge_2g_loc1
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  gw_cloud:
+    cap_add:
+    - ALL
+    command:
+    - gateway
+    - delay --time 5 --jitter 5 --distribution normal
+    - rate --rate 100mbit
+    depends_on:
+    - docker_api_proxy
+    - redis
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.gw: ''
+    networks:
+    - cloud
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   gw_cloud_user:
@@ -682,66 +666,6 @@ services:
     - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  gw_field_loc1:
-    cap_add:
-    - ALL
-    command:
-    - gateway
-    - delay --time 25 --jitter 5 --distribution normal
-    - rate --rate 50mbit
-    depends_on:
-    - docker_api_proxy
-    - redis
-    environment:
-      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
-      NODE_HOSTNAME: '{{.Node.Hostname}}'
-      NODE_ID: '{{.Node.ID}}'
-      PORT_CATALOGUE: '9090'
-      PORT_COAP: '5683'
-      PORT_HTTP: '80'
-      PORT_MQTT: '1883'
-      PORT_WS: '81'
-      REDIS_URL: redis://redis
-      SERVICE_ID: '{{.Service.ID}}'
-      SERVICE_NAME: '{{.Service.Name}}'
-    hostname: '{{.Task.Name}}'
-    image: agmangas/wotemu
-    labels:
-      org.fundacionctic.wotemu.gw: ''
-    networks:
-    - field_loc1
-    volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
-  gw_field_loc2:
-    cap_add:
-    - ALL
-    command:
-    - gateway
-    - delay --time 25 --jitter 5 --distribution normal
-    - rate --rate 50mbit
-    depends_on:
-    - docker_api_proxy
-    - redis
-    environment:
-      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
-      NODE_HOSTNAME: '{{.Node.Hostname}}'
-      NODE_ID: '{{.Node.ID}}'
-      PORT_CATALOGUE: '9090'
-      PORT_COAP: '5683'
-      PORT_HTTP: '80'
-      PORT_MQTT: '1883'
-      PORT_WS: '81'
-      REDIS_URL: redis://redis
-      SERVICE_ID: '{{.Service.ID}}'
-      SERVICE_NAME: '{{.Service.Name}}'
-    hostname: '{{.Task.Name}}'
-    image: agmangas/wotemu
-    labels:
-      org.fundacionctic.wotemu.gw: ''
-    networks:
-    - field_loc2
-    volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
   mongo:
     deploy:
       restart_policy:
@@ -762,11 +686,10 @@ services:
     labels:
       org.fundacionctic.wotemu.redis: ''
     networks:
-    - field_loc2
-    - cloud_user
-    - field_loc1
-    - edge_2g_loc1
     - edge_3g_loc2
+    - cloud
+    - cloud_user
+    - edge_2g_loc1
     ports:
     - '6379'
   user:
@@ -789,9 +712,9 @@ services:
     - lambd
     - '5'
     depends_on:
-    - gw_cloud_user
-    - docker_api_proxy
     - redis
+    - docker_api_proxy
+    - gw_cloud_user
     deploy:
       replicas: 5
     environment:
